Removed JOL. Added javadocs.